fixed spelling - dashboard

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -33,7 +33,7 @@
                     aria-controls="nav-profile" aria-selected="false">STUDENT INFO</button>
                 <button class="nav-link rounded-0 border-light bg-danger px-5 py-3 text-white font-weight-bolder"
                     id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab"
-                    aria-controls="nav-contact" aria-selected="false">ENDROLLMENT</button>
+                    aria-controls="nav-contact" aria-selected="false">ENROLLMENT</button>
                 <button class="nav-link rounded-0 border-light bg-danger px-5 py-3 text-white font-weight-bolder"
                     id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab"
                     aria-controls="nav-contact" aria-selected="false">REGISTRATION</button>
